<resources>
	<string name="empty"></string>
	<string name="placeholder">Placeholder</string>

	<string name="account_type" formatted="false">Twitter</string>
	<string name="account_label">Darknova</string>

	<string name="crash_toast_text">Sending error reports&#8230;</string>

	<string name="app_name">Darknova</string>

	<string name="action_settings">Settings</string>
	<string name="action_reorder_page">Reorder page</string>
	<string name="action_close_page">Close page</string>
	<string name="action_clear_selection">Clear selection</string>
	<string name="action_search">Search</string>
	<string name="action_search_text">Search &quot;${text}&quot;</string>
	<string name="action_clean">Complete refresh</string>
	<string name="search_hint">Search tweets and users</string>

	<string name="drawer_open">Open drawer</string>
	<string name="drawer_close">Close drawer</string>
	<string name="drawer_stream_btn_on">Turn stream on</string>
	<string name="drawer_stream_btn_off">Turn stream off</string>
	<string name="drawer_add_page">Add page</string>
	<string name="drawer_manage_pages">Manage pages</string>
	<string name="drawer_add_account">Add account</string>
	<string name="drawer_manage_accounts">Manage accounts</string>
	<string name="drawer_menu_account_settings">Profile settings</string>
	<string name="drawer_menu_account_logout">Log out</string>
	<string name="drawer_menu_account_logout_confirm">Log out user ${screen_name}?</string>
	<string name="drawer_menu_page_settings">Page settings</string>
	<string name="drawer_menu_page_remove">Remove</string>

	<string name="login_preparing">Preparing to sign in&#8230;</string>
	<string name="login_signing">Signing in&#8230;</string>
	<string name="login_cancelled">Cancelled</string>
	<string name="login_error_occured">Error</string>

	<string name="tweet_description" formatted="false">${time} via ${via}</string>
	<string name="tweet_description_long" formatted="false">${time}, ${date} via ${via}</string>
	<string name="tweet_description_reply" formatted="false">${time} via ${via}, in reply to ${reply}</string>
	<string name="tweet_description_retweet" formatted="false">${time} via ${via}, ${retweet} retweeted</string>
	<string name="tweet_description_retweet_user" formatted="false">${user}</string>
	<string name="tweet_description_retweet_user_count" formatted="false">${count} user</string>
	<string name="tweet_description_retweet_user_counts" formatted="false">${count} users</string>

	<string name="new_tweet">New tweet</string>
	<string name="new_tweet_add_to_new">Add to new tweet</string>
	<string name="new_tweet_open_composer">Open composer?</string>
	<string name="new_tweet_in_main">In main app</string>
	<string name="new_tweet_select_user">Select user</string>
	<string name="new_tweet_geo">Location</string>
	<string name="new_tweet_geo_use">Use location</string>
	<string name="new_tweet_geo_lat">Latitude</string>
	<string name="new_tweet_geo_long">Longitude</string>
	<string name="new_tweet_geo_auto">Autoresolve</string>
	<string name="new_tweet_geo_resolve">Resolve now</string>
	<string name="new_tweet_geo_pick">Pick</string>
	<string name="new_tweet_remove">Remove this item?</string>
	<string name="new_tweet_options">Options</string>
	<string name="new_tweet_enabled">Enabled</string>
	<string name="new_tweet_disabled">Disabled</string>
	<string name="new_tweet_remove_after">Remove after tweet</string>
	<string name="new_tweet_interval">Interval</string>
	<string name="new_tweet_time_start">Starts at</string>
	<string name="new_tweet_time_end">Ends at</string>
	<string name="new_tweet_pattern">Pattern</string>
	<string name="new_tweet_use_regex">Use RegEx</string>
	<string name="new_tweet_pattern_test">- Test</string>
	<string name="new_tweet_list">List</string>
	<string name="new_tweet_hint">New tweet&#8230;</string>
	<string name="new_tweet_hide">Hide</string>
	<string name="new_tweet_write">Write</string>
	<string name="new_tweet_save">Save</string>
	<string name="new_tweet_attach_remove_required">4 images, 1 video, or 1 animation gif allowed for one tweet. Remove some of media to post.</string>
	<string name="new_tweet_attach">Attach</string>
	<string name="new_tweet_attach_remove_file">Do you want to remove file &quot;%&quot;?</string>
	<string name="new_tweet_attach_remove_select_extsdcard">Select the external storage directory.</string>
	<string name="new_tweet_attach_remove_failed">Cannot remove file.</string>
	<string name="new_tweet_attach_image">Attach image</string>
	<string name="new_tweet_attach_take_picture">Take a picture</string>
	<string name="new_tweet_attach_video">Attach video</string>
	<string name="new_tweet_attach_take_video">Take a video</string>
	<string name="new_tweet_attach_invalid">Bad response.</string>
	<string name="new_tweet_attach_permission_requested">Access to external storage is required to upload images.</string>
	<string name="new_tweet_attach_no_app_choose_picture">No suitable app to choose picture.</string>
	<string name="new_tweet_attach_no_app_take_picture">No suitable app to take picture.</string>
	<string name="new_tweet_attach_no_app_choose_video">No suitable app to choose video.</string>
	<string name="new_tweet_attach_no_app_take_video">No suitable app to take video.</string>

	<string-array name="new_tweet_type_array">
		<item>Once</item>
		<item>Scheduled</item>
		<item>Periodic</item>
		<item>Reply</item>
	</string-array>

	<string-array name="new_tweet_attachment_type_array">
		<item>Show all supported media</item>
		<item>Show only images</item>
		<item>Show only videos (&lt;15MB)</item>
		<item>Show only GIF files (&lt;5MB)</item>
	</string-array>

	<string name="tweet_action_reply">Reply</string>
	<string name="tweet_action_retweet">Retweet</string>
	<string name="tweet_action_quote">Quote</string>
	<string name="tweet_action_favorite">Favorite</string>

	<string name="stream_notification_title">${app_name}: Stream</string>
	<string name="stream_connected">${user}: Connected</string>
	<string name="stream_error">${user}: Error ${error}</string>
	<string name="stream_stopped">${user}: Stopped</string>
	<string name="stream_stopped_all">Stream quit</string>
	<string name="stream_quit_ongoing_notification">Stream still active</string>

	<string name="notification_new_activities">New activies</string>
	<string name="notification_new_activities_summary">${count} new activities</string>
	<string name="notification_new_activities_more">${count} more</string>
	<string name="notification_new_mention">New mention</string>
	<string name="notification_new_mention_description">${user}: ${text}</string>
	<string name="notification_new_mention_big_summary">From @${user_id} (${user_name})</string>
	<string name="notification_new_message">New message arrived</string>
	<string name="notification_new_message_description">Message from ${user}: ${text}</string>
	<string name="notification_keep_streaming_btn">Keep</string>
	<string name="notification_stop_streaming_btn">Stop</string>

	<string name="page_loading">Loading&#8230;</string>
	<string name="page_empty">Empty</string>
	<string name="page_empty_refresh">Swipe or click to refresh</string>
	<string name="page_filter_none">No matching item</string>
	<string name="page_filter_none_clear">Click to clear filter</string>
	<string name="page_unread">% unread</string>

	<string name="mediapreview_name">Darknova Previewer</string>
	<string name="mediapreview_cancel">Stop</string>
	<string name="mediapreview_not_yet_loaded">Image is not loaded.</string>
	<string name="mediapreview_rotate_left">Rotate left</string>
	<string name="mediapreview_rotate_right">Rotate right</string>
	<string name="mediapreview_share">Share</string>
	<string name="mediapreview_retry">Retry</string>
	<string name="mediapreview_change_background">Change background</string>
	<string name="mediapreview_download">Download</string>
	<string name="mediapreview_download_fail">Download failed</string>
	<string name="mediapreview_downloaded_ask">Saved to ${path}.\n\nOpen in external viewer?</string>
	<string name="mediapreview_downloaded_ask_fail">No external viewer found</string>
	<string name="mediapreview_ready">Ready</string>
	<string name="mediapreview_reload">Reload</string>
	<string name="mediapreview_copy_url">Copy URL</string>
	<string name="mediapreview_copy_media_url">Copy media URL</string>
	<string name="mediapreview_error">Error</string>
	<string name="mediapreview_big_file">Big file</string>
	<string name="mediapreview_open">Open in another app</string>
	<string name="mediapreview_search_with_google">Search with Google</string>
	<string name="mediapreview_big_file_message">The image is %1. Do you want to continue?</string>
	<string name="mediapreview_resume">Resume</string>
	<string name="mediapreview_cancelled">Cancelled</string>
	<string name="mediapreview_download_complete">Download complete! Do you want to open the downloaded image?</string>
	<string name="mediapreview_connecting">Connecting&#8230;</string>
	<string name="mediapreview_downloading">Receiving media&#8230;</string>
	<string name="mediapreview_reading">Reading media&#8230;</string>
	<string name="mediapreview_zoom_display">x%.02f</string>
	<string name="mediapreview_another_app">Another app</string>

	<string name="channel_main" translatable="false">main</string>
	
	<string name="times" formatted="false">just now/% seconds ago/a minute ago/% minutes ago/1 hour ago/% hours ago/1 day ago/% days ago/1 month ago/% months ago/1 year ago/% monthes ago/1 century ago/% centuries ago/1 millennium ago/% millennia ago</string>
	<string name="durations" formatted="false">a second/% seconds/a minute/% minutes/a hour/% hours/a day/% days/a month/% months/a year/% months/a century/% centuries/1 millennium/% millennia</string>
	<string name="filesizes" formatted="false">% bytes/%KB/%MB/%GB/%TB</string>
</resources>
