<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/rotate_left"
		android:icon="?attr/ic_image_rotate_left"
		android:title="@string/mediapreview_rotate_left"
		app:showAsAction="always"/>
	<item
		android:id="@+id/rotate_right"
		android:icon="?attr/ic_image_rotate_right"
		android:title="@string/mediapreview_rotate_right"
		app:showAsAction="always"/>
	<item
		android:id="@+id/download"
		android:title="@string/mediapreview_download"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/share"
		android:title="@string/mediapreview_share"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/reload"
		android:title="@string/mediapreview_reload"
		app:showAsAction="never"/>
	<item
		android:id="@+id/change_background"
		android:title="@string/mediapreview_change_background"
		app:showAsAction="never"/>
	<item
		android:id="@+id/copy"
		android:title="@string/mediapreview_copy_url"
		app:showAsAction="never"/>
	<item
		android:id="@+id/copy_image"
		android:title="@string/mediapreview_copy_media_url"
		app:showAsAction="never"/>
	<item
		android:id="@+id/search_image"
		android:title="@string/mediapreview_search_with_google"
		app:showAsAction="never"/>
	<item
		android:id="@+id/open"
		android:title="@string/mediapreview_open"
		app:showAsAction="never"/>
</menu>