<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context=".MyTwitter">
	<item
		android:id="@+id/action_close_page"
		android:icon="?attr/ic_content_clear"
		android:title="@string/action_close_page"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_clear_selection"
		android:icon="?attr/ic_content_clear"
		android:title="@string/action_clear_selection"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/action_search"
		android:icon="?attr/ic_action_search"
		android:title="@string/action_search"
		app:actionViewClass="android.support.v7.widget.SearchView"
		app:iconifiedByDefault="true"
		app:queryHint="@string/search_hint"
		app:showAsAction="ifRoom|collapseActionView"/>
	<item
		android:id="@+id/action_clean"
		android:icon="?attr/ic_navigation_refresh"
		android:title="@string/action_clean"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_settings"
		android:icon="?attr/ic_action_settings"
		android:title="@string/action_settings"
		app:showAsAction="never"/>
</menu>
