<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
			 android:layout_width="match_parent"
			 android:layout_height="match_parent"
			 android:animateLayoutChanges="true"
			 android:background="@android:color/black"
			 android:clickable="true">

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginBottom="48dp">

		<android.support.v7.widget.RecyclerView
			android:id="@+id/media_list"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:visibility="gone"/>
	</FrameLayout>

	<FrameLayout
		android:id="@+id/editor_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="48dp">

		<EditText
			android:id="@+id/editor"
			style="?android:attr/textStyle"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginBottom="48dp"
			android:gravity="start|top"
			android:hint="@string/new_tweet_hint"
			android:inputType="text|textMultiLine"
			android:maxHeight="100sp"
			android:minHeight="64sp"
			android:paddingLeft="8dp"
			android:paddingRight="8dp"/>

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:layout_gravity="bottom"
			android:background="@android:color/transparent">

			<Button
				android:id="@+id/clear_btn"
				android:layout_width="72dp"
				android:layout_height="48dp"
				android:layout_gravity="start"
				android:background="@drawable/ripple_bg"
				android:paddingLeft="6dp"
				android:paddingRight="6dp"
				android:text="@string/new_tweet_hide"/>

			<ImageButton
				android:id="@+id/write_btn"
				android:layout_width="72dp"
				android:layout_height="48dp"
				android:layout_gravity="end"
				android:background="@drawable/ripple_bg"
				android:contentDescription="@string/new_tweet_save"
				android:padding="8dp"
				android:scaleType="fitCenter"
				android:src="?attr/ic_content_send"/>

			<android.support.v7.widget.RecyclerView
				android:id="@+id/attach_list"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:layout_gravity="end"
				android:layout_marginLeft="72dp"
				android:layout_marginRight="72dp"
				android:orientation="horizontal"
				android:overScrollMode="ifContentScrolls"/>
		</FrameLayout>

	</FrameLayout>

	<ScrollView
		android:id="@+id/account_list_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="48dp"
		android:visibility="gone">

		<org.apmem.tools.layouts.FlowLayout
			android:id="@+id/account_list"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="48dp"/>
	</ScrollView>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="48dp">

		<android.support.v7.widget.RecyclerView
			android:id="@+id/list_templates"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:visibility="gone"/>
	</FrameLayout>

	<ScrollView
		android:id="@+id/template_location"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="48dp"
		android:visibility="gone">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<CheckBox
				android:id="@+id/use_geo"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:padding="6dp"
				android:text="@string/new_tweet_geo_use"/>

			<LinearLayout
				android:id="@+id/latlong"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:layout_below="@+id/use_geo"
				android:weightSum="2">

				<EditText
					android:id="@+id/latitude"
					android:layout_width="0dp"
					android:layout_height="48dp"
					android:layout_weight="1"
					android:hint="@string/new_tweet_geo_lat"/>

				<EditText
					android:id="@+id/longitude"
					android:layout_width="0dp"
					android:layout_height="48dp"
					android:layout_weight="1"
					android:hint="@string/new_tweet_geo_long"/>
			</LinearLayout>

			<CheckBox
				android:id="@+id/autoresolve"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:layout_below="@+id/latlong"
				android:padding="6dp"
				android:text="@string/new_tweet_geo_auto"/>

			<Button
				android:id="@+id/resolve"
				style="?attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_alignParentEnd="true"
				android:layout_alignParentRight="true"
				android:layout_below="@+id/latlong"
				android:text="@string/new_tweet_geo_resolve"/>

			<Button
				android:id="@+id/pick"
				style="?attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_below="@+id/latlong"
				android:layout_toLeftOf="@+id/resolve"
				android:layout_toStartOf="@+id/resolve"
				android:text="@string/new_tweet_geo_pick"/>
		</RelativeLayout>
	</ScrollView>

	<ScrollView
		android:id="@+id/template_options"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="48dp"
		android:visibility="gone">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:animateLayoutChanges="true">

			<Spinner
				android:id="@+id/template_type"
				android:layout_width="128dp"
				android:layout_height="48dp"/>

			<CheckBox
				android:id="@+id/enabled"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_marginLeft="128dp"
				android:layout_marginStart="128dp"
				android:text="@string/new_tweet_enabled"/>

			<CheckBox
				android:id="@+id/remove_after"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_below="@+id/template_type"
				android:text="@string/new_tweet_remove_after"/>

			<TextView
				android:layout_width="96dp"
				android:layout_height="48dp"
				android:layout_below="@id/remove_after"
				android:gravity="center_vertical|start"
				android:padding="6dp"
				android:text="@string/new_tweet_interval"
				android:textAppearance="?android:textAppearance"/>

			<AutoCompleteTextView
				android:id="@+id/interval"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:layout_below="@id/remove_after"
				android:layout_marginLeft="96dp"
				android:layout_marginStart="96dp"/>

			<TextView
				android:layout_width="96dp"
				android:layout_height="48dp"
				android:layout_below="@+id/interval"
				android:gravity="center_vertical|start"
				android:padding="6dp"
				android:text="@string/new_tweet_time_start"
				android:textAppearance="?android:textAppearance"/>

			<TextView
				android:id="@+id/from"
				style="?buttonBarButtonStyle"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:layout_below="@+id/interval"
				android:layout_marginLeft="96dp"
				android:layout_marginStart="96dp"
				android:gravity="start|center_vertical"/>

			<TextView
				android:layout_width="96dp"
				android:layout_height="48dp"
				android:layout_below="@+id/from"
				android:gravity="center_vertical|start"
				android:padding="6dp"
				android:text="@string/new_tweet_time_end"
				android:textAppearance="?android:textAppearance"/>

			<TextView
				android:id="@+id/to"
				style="?buttonBarButtonStyle"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:layout_below="@+id/from"
				android:layout_marginLeft="96dp"
				android:layout_marginStart="96dp"
				android:gravity="start|center_vertical"/>

			<TextView
				android:layout_width="96dp"
				android:layout_height="48dp"
				android:layout_below="@+id/to"
				android:gravity="center_vertical|start"
				android:padding="6dp"
				android:text="@string/new_tweet_pattern"
				android:textAppearance="?android:textAppearance"/>

			<CheckBox
				android:id="@+id/use_regex"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:layout_below="@+id/to"
				android:layout_marginLeft="96dp"
				android:layout_marginStart="96dp"
				android:text="@string/new_tweet_use_regex"/>

			<EditText
				android:id="@+id/pattern"
				android:layout_width="match_parent"
				android:layout_height="96dp"
				android:layout_below="@+id/use_regex"
				android:hint="@string/new_tweet_pattern"
				android:inputType="textLongMessage"/>

			<TextView
				android:layout_width="96dp"
				android:layout_height="48dp"
				android:layout_below="@+id/pattern"
				android:gravity="center_vertical|start"
				android:padding="6dp"
				android:text="@string/new_tweet_pattern_test"
				android:textAppearance="?android:textAppearance"/>

			<EditText
				android:id="@+id/test"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:layout_below="@+id/pattern"
				android:layout_marginLeft="96dp"
				android:layout_marginStart="96dp"
				android:hint="@string/new_tweet_pattern_test"/>
		</RelativeLayout>
	</ScrollView>

	<FrameLayout
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_gravity="top"
		android:background="@android:color/transparent">

		<com.soreepeong.darknova.ui.view.ChildBlockingFrameLayout
			android:id="@+id/user_select"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:layout_gravity="top|start"
			android:layout_marginEnd="144dp"
			android:layout_marginRight="144dp"
			android:background="@drawable/ripple_bg"
			android:padding="6dp">

			<ImageView
				android:id="@+id/user_select_expander"
				android:layout_width="36dp"
				android:layout_height="36dp"
				android:contentDescription="@string/empty"
				android:src="?attr/ic_navigation_expand_more"/>

			<android.support.v7.widget.RecyclerView
				android:id="@+id/selected_user_image_list"
				android:layout_width="match_parent"
				android:layout_height="36dp"
				android:layout_marginLeft="36dp"
				android:layout_marginStart="36dp"
				android:clickable="false"
				android:focusable="false"
				android:overScrollMode="never"/>

			<TextView
				android:id="@+id/user_select_text"
				android:layout_width="wrap_content"
				android:layout_height="36dp"
				android:layout_marginLeft="42dp"
				android:layout_marginStart="42dp"
				android:ellipsize="end"
				android:gravity="center_vertical|start"
				android:text="@string/new_tweet_select_user"
				android:textAppearance="?android:textAppearanceButton"/>
		</com.soreepeong.darknova.ui.view.ChildBlockingFrameLayout>

		<ImageView
			android:id="@+id/options"
			android:layout_width="wrap_content"
			android:layout_height="48dp"
			android:layout_gravity="top|end"
			android:layout_marginEnd="48dp"
			android:layout_marginRight="48dp"
			android:background="@drawable/ripple_bg"
			android:contentDescription="@string/new_tweet_options"
			android:padding="8dp"
			android:src="?attr/ic_action_settings"/>

		<ImageView
			android:id="@+id/template_list"
			android:layout_width="wrap_content"
			android:layout_height="48dp"
			android:layout_gravity="top|end"
			android:layout_marginEnd="96dp"
			android:layout_marginRight="96dp"
			android:background="@drawable/ripple_bg"
			android:contentDescription="@string/new_tweet_list"
			android:padding="8dp"
			android:src="?attr/ic_content_drafts"/>

		<ImageView
			android:id="@+id/location"
			android:layout_width="wrap_content"
			android:layout_height="48dp"
			android:layout_gravity="top|end"
			android:background="@drawable/ripple_bg"
			android:contentDescription="@string/new_tweet_geo"
			android:padding="8dp"
			android:src="?attr/ic_communication_location_off"/>
	</FrameLayout>
</FrameLayout>