<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
			 android:layout_width="match_parent"
			 android:layout_height="match_parent"
			 android:animateLayoutChanges="true">

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginBottom="48dp">

		<android.support.v7.widget.RecyclerView
			android:id="@+id/media_list"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:visibility="gone"/>
	</FrameLayout>

	<ScrollView
		android:id="@+id/account_list_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="48dp"
		android:visibility="gone">

		<org.apmem.tools.layouts.FlowLayout
			android:id="@+id/account_list"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="48dp"/>
	</ScrollView>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="48dp">

		<android.support.v7.widget.RecyclerView
			android:id="@+id/list_templates"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:visibility="gone"/>
	</FrameLayout>

	<ScrollView
		android:id="@+id/template_location"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="48dp"
		android:visibility="gone">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<CheckBox
				android:id="@+id/use_geo"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:padding="6dp"
				android:text="@string/new_tweet_geo_use"/>

			<LinearLayout
				android:id="@+id/latlong"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:layout_below="@+id/use_geo"
				android:weightSum="2">

				<EditText
					android:id="@+id/latitude"
					android:layout_width="0dp"
					android:layout_height="48dp"
					android:layout_weight="1"
					android:hint="@string/new_tweet_geo_lat"/>

				<EditText
					android:id="@+id/longitude"
					android:layout_width="0dp"
					android:layout_height="48dp"
					android:layout_weight="1"
					android:hint="@string/new_tweet_geo_long"/>
			</LinearLayout>

			<CheckBox
				android:id="@+id/autoresolve"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:layout_below="@+id/latlong"
				android:padding="6dp"
				android:text="@string/new_tweet_geo_auto"/>

			<Button
				android:id="@+id/resolve"
				style="?attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_alignParentEnd="true"
				android:layout_alignParentRight="true"
				android:layout_below="@+id/latlong"
				android:text="@string/new_tweet_geo_resolve"/>

			<Button
				android:id="@+id/pick"
				style="?attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_below="@+id/latlong"
				android:layout_toLeftOf="@+id/resolve"
				android:layout_toStartOf="@+id/resolve"
				android:text="@string/new_tweet_geo_pick"/>
		</RelativeLayout>
	</ScrollView>

	<ScrollView
		android:id="@+id/template_options"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="48dp"
		android:visibility="gone">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:animateLayoutChanges="true">

			<Spinner
				android:id="@+id/template_type"
				android:layout_width="128dp"
				android:layout_height="48dp"/>

			<CheckBox
				android:id="@+id/enabled"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_marginLeft="128dp"
				android:layout_marginStart="128dp"
				android:text="@string/new_tweet_enabled"/>

			<CheckBox
				android:id="@+id/remove_after"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_below="@+id/template_type"
				android:text="@string/new_tweet_remove_after"/>

			<TextView
				android:layout_width="96dp"
				android:layout_height="48dp"
				android:layout_below="@id/remove_after"
				android:gravity="center_vertical|start"
				android:padding="6dp"
				android:text="@string/new_tweet_interval"
				android:textAppearance="?android:textAppearance"/>

			<AutoCompleteTextView
				android:id="@+id/interval"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:layout_below="@id/remove_after"
				android:layout_marginLeft="96dp"
				android:layout_marginStart="96dp"/>

			<TextView
				android:layout_width="96dp"
				android:layout_height="48dp"
				android:layout_below="@+id/interval"
				android:gravity="center_vertical|start"
				android:padding="6dp"
				android:text="@string/new_tweet_time_start"
				android:textAppearance="?android:textAppearance"/>

			<TextView
				android:id="@+id/from"
				style="?buttonBarButtonStyle"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:layout_below="@+id/interval"
				android:layout_marginLeft="96dp"
				android:layout_marginStart="96dp"
				android:gravity="start|center_vertical"/>

			<TextView
				android:layout_width="96dp"
				android:layout_height="48dp"
				android:layout_below="@+id/from"
				android:gravity="center_vertical|start"
				android:padding="6dp"
				android:text="@string/new_tweet_time_end"
				android:textAppearance="?android:textAppearance"/>

			<TextView
				android:id="@+id/to"
				style="?buttonBarButtonStyle"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:layout_below="@+id/from"
				android:layout_marginLeft="96dp"
				android:layout_marginStart="96dp"
				android:gravity="start|center_vertical"/>

			<TextView
				android:layout_width="96dp"
				android:layout_height="48dp"
				android:layout_below="@+id/to"
				android:gravity="center_vertical|start"
				android:padding="6dp"
				android:text="@string/new_tweet_pattern"
				android:textAppearance="?android:textAppearance"/>

			<CheckBox
				android:id="@+id/use_regex"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:layout_below="@+id/to"
				android:layout_marginLeft="96dp"
				android:layout_marginStart="96dp"
				android:text="@string/new_tweet_use_regex"/>

			<EditText
				android:id="@+id/pattern"
				android:layout_width="match_parent"
				android:layout_height="96dp"
				android:layout_below="@+id/use_regex"
				android:hint="@string/new_tweet_pattern"
				android:inputType="textLongMessage"/>

			<TextView
				android:layout_width="96dp"
				android:layout_height="48dp"
				android:layout_below="@+id/pattern"
				android:gravity="center_vertical|start"
				android:padding="6dp"
				android:text="@string/new_tweet_pattern_test"
				android:textAppearance="?android:textAppearance"/>

			<EditText
				android:id="@+id/test"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:layout_below="@+id/pattern"
				android:layout_marginLeft="96dp"
				android:layout_marginStart="96dp"
				android:hint="@string/new_tweet_pattern_test"/>
		</RelativeLayout>
	</ScrollView>

</FrameLayout>