<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
			 android:layout_width="match_parent"
			 android:layout_height="match_parent">

	<Spinner
		android:id="@+id/attachment_type"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_gravity="bottom"
		android:padding="8dp"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginBottom="48dp"
		android:orientation="horizontal"
		android:weightSum="4">

		<ImageView
			android:id="@+id/pick_image"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="@drawable/ripple_bg"
			android:contentDescription="@string/new_tweet_attach_image"
			android:padding="8dp"
			android:scaleType="center"
			android:src="?attr/ic_image_image"
			/>

		<ImageView
			android:id="@+id/take_image"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="@drawable/ripple_bg"
			android:contentDescription="@string/new_tweet_attach_take_picture"
			android:padding="8dp"
			android:scaleType="center"
			android:src="?attr/ic_image_camera_alt"
			/>

		<ImageView
			android:id="@+id/pick_video"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="@drawable/ripple_bg"
			android:contentDescription="@string/new_tweet_attach_video"
			android:padding="8dp"
			android:scaleType="center"
			android:src="?attr/ic_av_video_collection"
			/>

		<ImageView
			android:id="@+id/take_video"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="@drawable/ripple_bg"
			android:contentDescription="@string/new_tweet_attach_take_video"
			android:padding="8dp"
			android:scaleType="center"
			android:src="?attr/ic_av_videocam"
			/>
	</LinearLayout>
</FrameLayout>